# Futili

./: .gitignore  CMakeLists.txt  backupDirectory.desktop  futili.cpp  futili.desktop  futili.h  futili.json  main.cpp
po/: CMakeLists.txt  extract-messages.sh  futili.pot  zh_CN.po
src/: backupconfig.cpp  backupconfig.h  createbackupdialog.cpp  createbackupdialog.h  createbackupdialog.ui  dirfile.cpp  dirfile.h  futili.cpp  futili.h  futili.json  main.cpp
src/locales/: futili_zh_CN.qm  futili_zh_CN.ts
src/resources/: futili.qrc
